--- a/portfolio/theme/about.html
+++ b/portfolio/theme/about.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
 
-<!--
- // WEBSITE: https://themefisher.com
- // TWITTER: https://twitter.com/themefisher
- // FACEBOOK: https://www.facebook.com/themefisher
- // GITHUB: https://github.com/themefisher/
--->
-
 <html lang="zxx">
 
 <head>
   <meta charset="utf-8">
-  <title>Thomson-Minimal Portfolio Temaplate</title>
+  <title>Brandon Poon</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,7 +28,7 @@
 
 <body>
   
-<!-- Navgiation Start -->
+<!-- Navigation Start -->
 <!-- Header Start --> 
 
 <nav class="navbar navbar-expand-lg  main-nav " id="navbar">
@@ -50,34 +43,10 @@
   
 		  <div class="collapse navbar-collapse" id="navbarsExample09">
 			<ul class="navbar-nav ml-auto">
-			  <li class="nav-item  active"><a class="nav-link" href="index.html">Home</a></li>
-
-			  <li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About</a>
-					<ul class="dropdown-menu" aria-labelledby="dropdown01">
-						<li><a class="dropdown-item" href="about.html">About Me</a></li>
-						<li><a class="dropdown-item" href="about-us.html">About Us</a></li>
-					</ul>
-			  </li>
-
-			  <li class="nav-item dropdown active">
-					<a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Portfolio</a>
-					<ul class="dropdown-menu" aria-labelledby="dropdown02">
-						<li><a class="dropdown-item" href="portfolio-1.html">Portfolio Masonary</a></li>
-						<li><a class="dropdown-item" href="portfolio-2.html">Portfolio lightbox</a></li>
-						<li><a class="dropdown-item" href="portfolio-3.html">Portfolio 2 column</a></li>
-						<li><a class="dropdown-item" href="portfolio-single.html">Portfolio Details</a></li>
-					</ul>
-			  </li>
-			   <li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Blog</a>
-					<ul class="dropdown-menu" aria-labelledby="dropdown05">
-						<li><a class="dropdown-item" href="blog-grid.html">Blog Grid</a></li>
-						<li><a class="dropdown-item" href="blog-sidebar.html">Blog with Sidebar</a></li>
-
-						<li><a class="dropdown-item" href="blog-single.html">Blog Single</a></li>
-					</ul>
-			  </li>
+			   <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+			   <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+			   <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+			   <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
 			   <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 			</ul>
 		</div>
@@ -85,9 +54,7 @@
 </nav>
 
 <!-- Header Close --> 
-
-
-<!-- Navigation ENd -->
+<!-- Navigation End -->
 
 <!-- Banner start -->
 <section class="section banner-3">
@@ -99,22 +66,21 @@
 				</div>
 			</div>
 			<div class="col-lg-7">
-				<h2>Jems Smith</h2>
-				<p class="lead mb-4">I create premium designs and technology</p>
+				<h2>Brandon Poon</h2>
+				<p class="lead mb-4">Nanyang Polytechnic</p>
 
-				<p class="mb-4">I was born in Los Angeles in 1980.I'm 23 years old creative web designer, specializing in User Interface Design and Development.Veritatis culpa sunt alias esse fuga accusamus nostrum, iusto neque. </p>
-
+				<p class="mb-4">Hello, I'm Brandon Poon, a current Year 3 student of Infocomm and Security at Nanyang Polytechnic. My academic journey has been marked by notable projects, such as the Sustainability Living Lab during my third year. In this initiative, I played a key role in pairing fresh sensors and contributing to the optimization of sustainability initiatives, employing technologies like Milesight, AWS, Flask App, and Grafana. Academically, I've gained proficiency in Web Design, HTML & CSS, C#, Python, Cisco Packet Tracer, MySQL, JavaScript, and AWS. These skills have found practical application in real-world projects, demonstrating my ability to bridge theory with hands-on experience. With a strong commitment to continuous learning, my focus on academic pursuits aligns with my enthusiasm for acquiring new skills and certifications. Looking ahead, I'm eager to contribute to the dynamic field of information technology and security, aspiring to participate, create, and grow in this ever-evolving landscape.</p>
 				
 				<img src="images/signature.png" alt="" class="img-fluid">
 			</div>
 
 			<div class="col-lg-5">
-				<ul class="list-unstyled mt-3 mb-5 about-list">
+				<!-- <ul class="list-unstyled mt-3 mb-5 about-list">
 					<li>- Web design</li>
 					<li>- Brand Identity</li>
 					<li>- Development & CMS</li>
 					<li>- Phptography</li>
-				</ul>
+				</ul> -->
 			</div>
 		</div>
 	</div>
@@ -127,36 +93,36 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-4 mb-5">
-				<h3 class="mb-2">Work Experiences.</h3>
+				<h3 class="mb-2">Work Experiences</h3>
 			</div>
 	
 			<div class="col-lg-8">
 				<div class="row">
 					<div class="col-lg-6">
 						<div class="about-info mb-5">
-							<span>January 2015 - August 2018</span>
-							<h4 class="mb-3 mt-1">UI UX Designer at Behance</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nec bibendum mauris. Curabitur quis vehicula leo. Vivamus leo ipsum</p>
+							<span>4 September 2023 - 24 November 2023</span>
+							<h4 class="mb-3 mt-1">IT Intern at Land Transport Authority (LTA)</h4>
+							<p>I thrived during my Internship at LTA, where mentoring was at the heart of my experience. I delved into IT complexities, guided by industry pros, honing my technical prowess and problem-solving skills. This supportive environment not only expedited my development, but it also fuelled my contributions to the improvement of public transportation networks. I am grateful for the insightful mentoring that altered my LTA learning experience.</p>
 						</div>
-						<div class="about-info">
-							<span>January 2015 - August 2018</span>
+						<!-- <div class="about-info">
+							<span>2</span>
 							<h4 class="mb-3 mt-1">UI UX Designer at Envato</h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nec bibendum mauris. Curabitur quis vehicula leo. Vivamus leo ipsum</p>
-						</div>
+						</div> -->
 					</div>
 
-					<div class="col-lg-6">
+					<!-- <div class="col-lg-6">
 						<div class="about-info mb-5">
-							<span>January 2015 - August 2018</span>
+							<span>3</span>
 							<h4 class="mb-3 mt-1">UI UX Designer at Dribble</h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nec bibendum mauris. Curabitur quis vehicula leo. Vivamus leo ipsum</p>
 						</div>
 						<div class="about-info">
-							<span>January 2015 - August 2018</span>
+							<span>4</span>
 							<h4 class="mb-3 mt-1">UI UX Designer at Softinfo</h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nec bibendum mauris. Curabitur quis vehicula leo. Vivamus leo ipsum</p>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
@@ -169,22 +135,13 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-4">
-				<h3>My skills.</h3>
+				<h3>My Skills</h3>
 			</div>
 
 			<div class="col-lg-8">
 				<div class="progress-bar-content">
 					<div class="progress-label d-flex align-items-center">
-		                <div class="progress-title">Business Strategy</div>
-		                	<span class="progress-bar-units ml-auto">80%</span>
-	            	</div>
-					<div class="progress">
-						  <div class="progress-bar" data-percent="80"></div>
-					</div>
-				</div>
-				<div class="progress-bar-content">
-					<div class="progress-label d-flex align-items-center">
-		                <div class="progress-title">Design</div>
+		                <div class="progress-title">Web Design & Development</div>
 		                	<span class="progress-bar-units ml-auto">90%</span>
 	            	</div>
 					<div class="progress">
@@ -193,20 +150,29 @@
 				</div>
 				<div class="progress-bar-content">
 					<div class="progress-label d-flex align-items-center">
-		                <div class="progress-title">Digital Strategy</div>
-		                	<span class="progress-bar-units ml-auto">75%</span>
+		                <div class="progress-title">Infocomm Solutions</div>
+		                	<span class="progress-bar-units ml-auto">70%</span>
 	            	</div>
 					<div class="progress">
-						  <div class="progress-bar" data-percent="75"></div>
+						  <div class="progress-bar" data-percent="70"></div>
 					</div>
 				</div>
 				<div class="progress-bar-content">
 					<div class="progress-label d-flex align-items-center">
-		                <div class="progress-title">Development</div>
-		                	<span class="progress-bar-units ml-auto">85%</span>
+		                <div class="progress-title">UI/UX Design</div>
+		                	<span class="progress-bar-units ml-auto">60%</span>
 	            	</div>
 					<div class="progress">
-						  <div class="progress-bar" data-percent="85"></div>
+						  <div class="progress-bar" data-percent="60"></div>
+					</div>
+				</div>
+				<div class="progress-bar-content">
+					<div class="progress-label d-flex align-items-center">
+		                <div class="progress-title">Events Management</div>
+		                	<span class="progress-bar-units ml-auto">70%</span>
+	            	</div>
+					<div class="progress">
+						  <div class="progress-bar" data-percent="70"></div>
 					</div>
 				</div>
 			</div>
@@ -223,7 +189,7 @@
 				<h3 class="text-white mb-0">Want to discuss about any project?</h3>
 			</div>
 			<div class="col-lg-4 text-lg-right mt-5 mt-lg-0">
-				<a href="#" class="btn btn-white">Contact me</a>
+				<a href="contact.html" class="btn btn-white">Contact me</a>
 			</div>
 		</div>
 	</div>
@@ -235,18 +201,20 @@
 	<div class="container">
 		<div class="row ">
 			<div class="col-lg-6">
-				<p class="mb-0">Copyrights © 2019. Designed & Developed by <a href="themefisher.com" class="text-white">Themefisher</a></p>
+				<p class="mb-0">Reach me easily at: <a href="themefisher.com" class="text-white">brandonpoonxinwei@gmail.com</a></p>
 			</div>
 			<div class="col-lg-6">
 				<div class="widget footer-widget text-lg-right mt-5 mt-lg-0">
 					<ul class="list-inline mb-0">
-						<li class="list-inline-item"><a href="https://www.facebook.com/themefisher" target="_blank"><i class="ti-facebook mr-3"></i></a>
+						<!-- <li class="list-inline-item"><a href="https://www.facebook.com/themefisher" target="_blank"><i class="ti-facebook mr-3"></i></a>
 						</li>
 						<li class="list-inline-item"><a href="https://twitter.com/themefisher" target="_blank"><i class="ti-twitter mr-3"></i></a>
-						</li>
-						<li class="list-inline-item"><a href="https://github.com/themefisher/" target="_blank"><i class="ti-github mr-3"></i></a></li>
-						<li class="list-inline-item"><a href="https://www.pinterest.com/themefisher/" target="_blank"><i class="ti-pinterest mr-3"></i></a></li>
-						<li class="list-inline-item"><a href="https://dribbble.com/themefisher/" target="_blank"><i class="ti-dribbble mr-3"></i></a></li>
+						</li> -->
+						<li class="list-inline-item"><a href="https://www.linkedin.com/in/brandonpxw/" target="_blank"><i class="ti-linkedin mr-3"></i></a></li>
+						<li class="list-inline-item"><a href="mailto:brandonpoonxinwei@gmail.com" target="_blank"><i class="ti-email mr-3"></i></a></li>
+						<li class="list-inline-item"><a href="https://github.com/brandonpxw/" target="_blank"><i class="ti-github mr-3"></i></a></li>
+						<!-- <li class="list-inline-item"><a href="https://www.pinterest.com/themefisher/" target="_blank"><i class="ti-pinterest mr-3"></i></a></li>
+						<li class="list-inline-item"><a href="https://dribbble.com/themefisher/" target="_blank"><i class="ti-dribbble mr-3"></i></a></li> -->
 					</ul>
 				</div>
 			</div>
