--- a/portfolio/theme/portfolio-single.html
+++ b/portfolio/theme/portfolio-single.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
 
-<!--
- // WEBSITE: https://themefisher.com
- // TWITTER: https://twitter.com/themefisher
- // FACEBOOK: https://www.facebook.com/themefisher
- // GITHUB: https://github.com/themefisher/
--->
-
 <html lang="zxx">
 
 <head>
   <meta charset="utf-8">
-  <title>Thomson-Minimal Portfolio Temaplate</title>
+  <title>Brandon Poon</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,6 +28,7 @@
 
 <body>
   
+<!-- Navigation Start -->
 <!-- Header Start --> 
 
 <nav class="navbar navbar-expand-lg  main-nav " id="navbar">
@@ -49,34 +43,10 @@
   
 		  <div class="collapse navbar-collapse" id="navbarsExample09">
 			<ul class="navbar-nav ml-auto">
-			  <li class="nav-item  active"><a class="nav-link" href="index.html">Home</a></li>
-
-			  <li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About</a>
-					<ul class="dropdown-menu" aria-labelledby="dropdown01">
-						<li><a class="dropdown-item" href="about.html">About Me</a></li>
-						<li><a class="dropdown-item" href="about-us.html">About Us</a></li>
-					</ul>
-			  </li>
-
-			  <li class="nav-item dropdown active">
-					<a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Portfolio</a>
-					<ul class="dropdown-menu" aria-labelledby="dropdown02">
-						<li><a class="dropdown-item" href="portfolio-1.html">Portfolio Masonary</a></li>
-						<li><a class="dropdown-item" href="portfolio-2.html">Portfolio lightbox</a></li>
-						<li><a class="dropdown-item" href="portfolio-3.html">Portfolio 2 column</a></li>
-						<li><a class="dropdown-item" href="portfolio-single.html">Portfolio Details</a></li>
-					</ul>
-			  </li>
-			   <li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Blog</a>
-					<ul class="dropdown-menu" aria-labelledby="dropdown05">
-						<li><a class="dropdown-item" href="blog-grid.html">Blog Grid</a></li>
-						<li><a class="dropdown-item" href="blog-sidebar.html">Blog with Sidebar</a></li>
-
-						<li><a class="dropdown-item" href="blog-single.html">Blog Single</a></li>
-					</ul>
-			  </li>
+			   <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+			   <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+			   <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+			   <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
 			   <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 			</ul>
 		</div>
@@ -84,6 +54,7 @@
 </nav>
 
 <!-- Header Close --> 
+<!-- Navigation End -->
 
 
 <section class="page-title section pb-0">
@@ -156,28 +127,32 @@
 </section>
 
 
+<!--  Footer Start-->
 <section class="footer">
 	<div class="container">
 		<div class="row ">
 			<div class="col-lg-6">
-				<p class="mb-0">Copyrights © 2019. Designed & Developed by <a href="themefisher.com" class="text-white">Themefisher</a></p>
+				<p class="mb-0">Reach me easily at: <a href="themefisher.com" class="text-white">brandonpoonxinwei@gmail.com</a></p>
 			</div>
 			<div class="col-lg-6">
 				<div class="widget footer-widget text-lg-right mt-5 mt-lg-0">
 					<ul class="list-inline mb-0">
-						<li class="list-inline-item"><a href="https://www.facebook.com/themefisher" target="_blank"><i class="ti-facebook mr-3"></i></a>
+						<!-- <li class="list-inline-item"><a href="https://www.facebook.com/themefisher" target="_blank"><i class="ti-facebook mr-3"></i></a>
 						</li>
 						<li class="list-inline-item"><a href="https://twitter.com/themefisher" target="_blank"><i class="ti-twitter mr-3"></i></a>
-						</li>
-						<li class="list-inline-item"><a href="https://github.com/themefisher/" target="_blank"><i class="ti-github mr-3"></i></a></li>
-						<li class="list-inline-item"><a href="https://www.pinterest.com/themefisher/" target="_blank"><i class="ti-pinterest mr-3"></i></a></li>
-						<li class="list-inline-item"><a href="https://dribbble.com/themefisher/" target="_blank"><i class="ti-dribbble mr-3"></i></a></li>
+						</li> -->
+						<li class="list-inline-item"><a href="https://www.linkedin.com/in/brandonpxw/" target="_blank"><i class="ti-linkedin mr-3"></i></a></li>
+						<li class="list-inline-item"><a href="mailto:brandonpoonxinwei@gmail.com" target="_blank"><i class="ti-email mr-3"></i></a></li>
+						<li class="list-inline-item"><a href="https://github.com/brandonpxw/" target="_blank"><i class="ti-github mr-3"></i></a></li>
+						<!-- <li class="list-inline-item"><a href="https://www.pinterest.com/themefisher/" target="_blank"><i class="ti-pinterest mr-3"></i></a></li>
+						<li class="list-inline-item"><a href="https://dribbble.com/themefisher/" target="_blank"><i class="ti-dribbble mr-3"></i></a></li> -->
 					</ul>
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
+<!-- Footer end -->
 <!-- jQuery -->
 <script src="plugins/jQuery/jquery.min.js"></script>
 <!-- Bootstrap JS -->
