--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 <nav class="navbar navbar-expand-lg  main-nav " id="navbar">
 	<div class="container">
 	  <a class="navbar-brand" href="index.html">
-	  	<img src="images/logo.png" alt="" class="img-fluid">
+	  	<img src="images/signature.png" alt="" class="img-fluid">
 	  </a>
 
 	  <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,7 +47,6 @@
 			   <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
 			   <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
 			   <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
-			   <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 			</ul>
 		</div>
 	</div>
@@ -142,7 +141,7 @@
 				<div class="progress-bar-content">
 					<div class="progress-label d-flex align-items-center">
 		                <div class="progress-title">Web Design & Development</div>
-		                	<span class="progress-bar-units ml-auto">90%</span>
+		                	<span class="progress-bar-units ml-auto">70%</span>
 	            	</div>
 					<div class="progress">
 						  <div class="progress-bar" data-percent="90"></div>
@@ -151,7 +150,7 @@
 				<div class="progress-bar-content">
 					<div class="progress-label d-flex align-items-center">
 		                <div class="progress-title">Infocomm Solutions</div>
-		                	<span class="progress-bar-units ml-auto">70%</span>
+		                	<span class="progress-bar-units ml-auto">60%</span>
 	            	</div>
 					<div class="progress">
 						  <div class="progress-bar" data-percent="70"></div>
@@ -160,19 +159,10 @@
 				<div class="progress-bar-content">
 					<div class="progress-label d-flex align-items-center">
 		                <div class="progress-title">UI/UX Design</div>
-		                	<span class="progress-bar-units ml-auto">60%</span>
+		                	<span class="progress-bar-units ml-auto">50%</span>
 	            	</div>
 					<div class="progress">
 						  <div class="progress-bar" data-percent="60"></div>
-					</div>
-				</div>
-				<div class="progress-bar-content">
-					<div class="progress-label d-flex align-items-center">
-		                <div class="progress-title">Events Management</div>
-		                	<span class="progress-bar-units ml-auto">70%</span>
-	            	</div>
-					<div class="progress">
-						  <div class="progress-bar" data-percent="70"></div>
 					</div>
 				</div>
 			</div>
