--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
 <nav class="navbar navbar-expand-lg  main-nav " id="navbar">
 	<div class="container">
 	  <a class="navbar-brand" href="index.html">
-	  	<img src="images/logo.png" alt="" class="img-fluid">
+	  	<img src="images/signature.png" alt="" class="img-fluid">
 	  </a>
 
 	  <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,7 +47,6 @@
 			   <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
 			   <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
 			   <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
-			   <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 			</ul>
 		</div>
 	</div>
