--- a/resume.html
+++ b/resume.html
@@ -61,7 +61,7 @@
 		<div class="row justify-content-center align-items-left">
 			<div class="col-lg-7">
 				<h2>My Resume</h2>
-				<iframe src= "images\Brandon-Poon-210455E_Resume.pdf" width="600" height="500"></iframe> 
+				<iframe src= "images\Brandon-Poon-210455E_Resume.pdf" width="100%" height="500"></iframe> 
 			</div>
 		</div>
 	</div>
