--- a/portfolioPages/appdevproject.html
+++ b/portfolioPages/appdevproject.html
@@ -12,18 +12,17 @@
   
   <!-- ** Plugins Needed for the Project ** -->
   <!-- Bootstrap -->
-  <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
-  <link rel="stylesheet" href="plugins/themify/css/themify-icons.css">
-  <link rel="stylesheet" href="plugins/counto/animate.css">
-  <link rel="stylesheet" href="plugins/aos/aos.css">
-  <link rel="stylesheet" href="plugins/owl-carousel/owl.carousel.min.css">
-  <link rel="stylesheet" href="plugins/owl-carousel/owl.theme.default.min.css">
-  <link rel="stylesheet" href="plugins/magnific-popup/magnific-popup.css">
-  <link rel="stylesheet" href="plugins/animated-text/animated-text.css">
+  <link rel="stylesheet" href="../plugins/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="../plugins/themify/css/themify-icons.css">
+  <link rel="stylesheet" href="../plugins/counto/animate.css">
+  <link rel="stylesheet" href="../plugins/aos/aos.css">
+  <link rel="stylesheet" href="../plugins/owl-carousel/owl.carousel.min.css">
+  <link rel="stylesheet" href="../plugins/owl-carousel/owl.theme.default.min.css">
+  <link rel="stylesheet" href="../plugins/magnific-popup/magnific-popup.css">
+  <link rel="stylesheet" href="../plugins/animated-text/animated-text.css">
 
   <!-- Main Stylesheet -->
-  <link href="css/style.css" rel="stylesheet">
-
+  <link href="../css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -34,7 +33,7 @@
 <nav class="navbar navbar-expand-lg  main-nav " id="navbar">
 	<div class="container">
 	  <a class="navbar-brand" href="index.html">
-	  	<img src="images/signature.png" alt="" class="img-fluid">
+	  	<img src="../images/signature.png" alt="" class="img-fluid">
 	  </a>
 
 	  <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,10 +42,9 @@
   
 		  <div class="collapse navbar-collapse" id="navbarsExample09">
 			<ul class="navbar-nav ml-auto">
-			   <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-			   <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-			   <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
-			   <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
+			   <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+			   <li class="nav-item"><a class="nav-link" href="../about.html">About</a></li>
+			   <li class="nav-item"><a class="nav-link" href="../resume.html">Resume</a></li>
 			</ul>
 		</div>
 	</div>
@@ -61,7 +59,7 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="text-center">
-          <h1 class="text-capitalize mb-0 text-lg">Portfolio Single</h1>
+          <h1 class="text-capitalize mb-0 text-lg">App Development Project</h1>
         </div>
       </div>
     </div>
@@ -73,26 +71,26 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6">
-				<img src="images/portfolio/9.jpg" alt="" class="img-fluid w-100">
+				<img src="../images/portfolio/appdevproject.png" alt="" class="img-fluid w-100">
 			</div>
 
 			<div class="col-lg-6">
 				<div class="project-info">
-					<h3 class="mb-4">Photography</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi eligendi fugiat ad cupiditate hic, eum debitis ipsum, quos non mollitia. Commodi suscipit obcaecati et, aperiam quas vero quo, labore tempore.</p>
+					<h3 class="mb-4">Nanyang Polytechnic - Year 1 Project</h3>
+					<p>This project was the first project that I embarked on during my journey in NYP. For this project, my team and I took on working on a Car Dealership Website in which had all the basic functionalities such as viewing and buying cars, accessories, accounts and inventory.</p>
 
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam debitis beatae doloremque cupiditate vel repellat nam est voluptates, magnam quod explicabo fugit, quidem.</p>
+					<p>Full Functionality List: Vehicle Shopping Cart, Car & Accessory Inventory, User & Admin Account Management, Feedback & Review, Car Services and Reward Points.</p>
 
 					<div class="row mt-4">
 						<div class="col-lg-6">
 							<div class="info">
-								<h5 class="mb-0">Client</h5>
-								<p>Thomson</p>
+								<h5 class="mb-0">School</h5>
+								<p>Nanyang Polytechnic</p>
 							</div>
 
 							<div class="info">
 								<h5 class="mb-0">Year</h5>
-								<p>2019</p>
+								<p>2021</p>
 							</div>
 							<div class="mt-4">
 								<a href="#" class="btn btn-main btn-small">View project</a>
@@ -102,14 +100,11 @@
 						<div class="col-lg-6">
 							<div class="info">
 								<h5 class="mb-0">Category</h5>
-								<p>Web Design</p>
+								<p>Information Technology</p>
 							</div>
 							<div class="info">
-								<h5>Share</h5>
-								<a href="#"><i class="ti-facebook"></i></a>
-								<a href="#"><i class="ti-twitter"></i></a>
-								<a href="#"><i class="ti-pinterest"></i></a>
-								<a href="#"><i class="ti-dribbble"></i></a>
+								<h5>Additional Information</h5>
+								<p>-</p>
 							</div>
 						</div>
 					</div>
@@ -153,21 +148,21 @@
 </section>
 <!-- Footer end -->
 <!-- jQuery -->
-<script src="plugins/jQuery/jquery.min.js"></script>
+<script src="../plugins/jQuery/jquery.min.js"></script>
 <!-- Bootstrap JS -->
-<script src="plugins/bootstrap/bootstrap.min.js"></script>
-<script src="plugins/aos/aos.js"></script>
-<script src="plugins/owl-carousel/owl.carousel.min.js"></script>
-<script src="plugins/shuffle/shuffle.min.js"></script>
-<script src="plugins/magnific-popup/jquery.magnific-popup.min.js"></script>
-<script src="plugins/animated-text/animated-text.js"></script>
-<script src="plugins/counto/apear.js"></script>
-<script src="plugins/counto/counTo.js"></script>
+<script src="../plugins/bootstrap/bootstrap.min.js"></script>
+<script src="../plugins/aos/aos.js"></script>
+<script src="../plugins/owl-carousel/owl.carousel.min.js"></script>
+<script src="../plugins/shuffle/shuffle.min.js"></script>
+<script src="../plugins/magnific-popup/jquery.magnific-popup.min.js"></script>
+<script src="../plugins/animated-text/animated-text.js"></script>
+<script src="../plugins/counto/apear.js"></script>
+<script src="../plugins/counto/counTo.js"></script>
 
  <!-- Google Map -->
-<script src="plugins/google-map/map.js"></script>
+<script src="../plugins/google-map/map.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAkeLMlsiwzp6b3Gnaxd86lvakimwGA6UA&callback=initMap"></script> 
 <!-- Main Script -->
-<script src="js/script.js"></script>
+<script src="../	js/script.js"></script>
 
 </html>
