--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
 			<ul class="navbar-nav ml-auto">
 			   <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
 			   <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-			   <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
 			   <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
 			</ul>
 		</div>
@@ -71,15 +70,14 @@
                         <b>Professional Content.</b>
                     </span>
                 </h2>
-                <p>I must explain to you how all this mistaken idea of denouncing pleasure and praising pain <br>was born and I will give you a complete account of the system</p>
+                <p>Below are the various projects and personal projects that I have taken up, as well as some of my achievements and accolades.</p>
 			</div>
 		</div>
 	</div>
 </section>
-
 <!-- Banner End -->
 
-<!-- POrtfolio start -->
+<!-- Portfolio start -->
 <section class="portfolio ">
 	<div class="container">
 		<div class="row mb-5">
@@ -89,31 +87,31 @@
 		            <input type="radio" name="shuffle-filter" value="all" checked="checked" />All Projects
 		          </label>
 		          <label class="btn">
-		            <input type="radio" name="shuffle-filter" value="design" />UI/UX Design
+		            <input type="radio" name="shuffle-filter" value="InformationTechnology" />Information Technology
 		          </label>
 		          <label class="btn">
-		            <input type="radio" name="shuffle-filter" value="branding" />branding
+		            <input type="radio" name="shuffle-filter" value="PersonalProjects" />Personal Projects
 		          </label>
 		          <label class="btn">
-		            <input type="radio" name="shuffle-filter" value="illustration" />Web Development
+		            <input type="radio" name="shuffle-filter" value="SchoolEvents" />School Events
 		          </label>
 		           <label class="btn">
-		            <input type="radio" name="shuffle-filter" value="photo" />Photography
+		            <input type="radio" name="shuffle-filter" value="Achievements&Accolades" />Achievements & Accolades
 		          </label>
 		        </div>
 	      	</div>
     	</div>	
 
 		<div class="row shuffle-wrapper portfolio-gallery">
-	      <div class="col-lg-4 col-6 mb-4 shuffle-item"  data-groups="[&quot;design&quot;,&quot;illustration&quot;]">
+	      <div class="col-lg-4 col-6 mb-4 shuffle-item"  data-groups="[&quot;design&quot;,&quot;InformationTechnology&quot;]">
 		      	<div class="position-relative inner-box">
 		          <div class="image position-relative ">
-	               <img src="images/portfolio/1.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
+	               <img src="images/portfolio/appdevproject.png" alt="portfolio-image" class="img-fluid w-100 d-block">
 	                <div class="overlay-box">
 	                  <div class="overlay-inner">
-	                    <a class="overlay-content" href="portfolio-single.html">
-	                      <h5 class="mb-0">Painting</h5>
-	                      <p>Design</p>
+	                    <a class="overlay-content" href="portfolioPages/appdevproject.html">
+	                      <h5 class="mb-0">App Development Project</h5>
+	                      <p>NYP - Year 1 Project</p>
 	                    </a>
 	                  </div>
 	                </div> 
@@ -153,7 +151,7 @@
 	        </div>
 	      </div>
 
-	      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;design&quot;,&quot;branding&quot;]">
+	      <!-- <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;design&quot;,&quot;branding&quot;]">
 	        <div class="position-relative inner-box">
 	            <div class="image position-relative ">
 	               <img src="images/portfolio/5.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
@@ -199,7 +197,7 @@
 	                </div> 
 	            </div>
 	        </div>
-	      </div>
+	      </div> -->
 	    </div>
 	</div>
 </section>
@@ -210,7 +208,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6">
-				<h2 class="mb-2 ">Core Services.</h2>
+				<h2 class="mb-2 ">Skills</h2>
 				<p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus, totam ipsa quia hic odit a sit laboriosam voluptatem in, blanditiis.</p>
 			</div>
 		</div>
