--- a/portfolioPages/appdevproject.html
+++ b/portfolioPages/appdevproject.html
@@ -93,7 +93,7 @@
 								<p>2021</p>
 							</div>
 							<div class="mt-4">
-								<a href="#" class="btn btn-main btn-small">View project</a>
+								<a href="https://github.com/brandonpxw/App-Development-Project" class="btn btn-main btn-small">View project</a>
 							</div>
 						</div>
 
