--- a/about.html
+++ b/about.html
@@ -128,48 +128,6 @@
 </section>
 <!-- About End -->
 
-<!-- Skill Start -->
-<section class="section skills">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-4">
-				<h3>My Skills</h3>
-			</div>
-
-			<div class="col-lg-8">
-				<div class="progress-bar-content">
-					<div class="progress-label d-flex align-items-center">
-		                <div class="progress-title">Web Design & Development</div>
-		                	<span class="progress-bar-units ml-auto">70%</span>
-	            	</div>
-					<div class="progress">
-						  <div class="progress-bar" data-percent="90"></div>
-					</div>
-				</div>
-				<div class="progress-bar-content">
-					<div class="progress-label d-flex align-items-center">
-		                <div class="progress-title">Infocomm Solutions</div>
-		                	<span class="progress-bar-units ml-auto">60%</span>
-	            	</div>
-					<div class="progress">
-						  <div class="progress-bar" data-percent="70"></div>
-					</div>
-				</div>
-				<div class="progress-bar-content">
-					<div class="progress-label d-flex align-items-center">
-		                <div class="progress-title">UI/UX Design</div>
-		                	<span class="progress-bar-units ml-auto">50%</span>
-	            	</div>
-					<div class="progress">
-						  <div class="progress-bar" data-percent="60"></div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- Skill end -->
-
 <!-- Cta Start -->
 <section class="section-sm pt-0 cta">
 	<div class="container">
@@ -178,7 +136,7 @@
 				<h3 class="text-white mb-0">Want to discuss about any project?</h3>
 			</div>
 			<div class="col-lg-4 text-lg-right mt-5 mt-lg-0">
-				<a href="contact.html" class="btn btn-white">Contact me</a>
+				<a href="mailto:brandonpoonxinwei@gmail.com" class="btn btn-white">Contact me</a>
 			</div>
 		</div>
 	</div>
