--- a/index.html
+++ b/index.html
@@ -82,123 +82,73 @@
 	<div class="container">
 		<div class="row mb-5">
 	      	<div class="col-10">
-		        <div class="btn-group btn-group-toggle " data-toggle="buttons">
-		          <label class="btn active ">
-		            <input type="radio" name="shuffle-filter" value="all" checked="checked" />All Projects
-		          </label>
-		          <label class="btn">
-		            <input type="radio" name="shuffle-filter" value="InformationTechnology" />Information Technology
-		          </label>
-		          <label class="btn">
-		            <input type="radio" name="shuffle-filter" value="PersonalProjects" />Personal Projects
-		          </label>
-		          <label class="btn">
-		            <input type="radio" name="shuffle-filter" value="SchoolEvents" />School Events
-		          </label>
-		           <label class="btn">
-		            <input type="radio" name="shuffle-filter" value="Achievements&Accolades" />Achievements & Accolades
-		          </label>
-		        </div>
-	      	</div>
+				<div class="btn-group btn-group-toggle " data-toggle="buttons">
+				<label class="btn active ">
+				<input type="radio" name="shuffle-filter" value="all" checked="checked" />All Projects
+				</label>
+				<label class="btn">
+				<input type="radio" name="shuffle-filter" value="InformationTechnology" />Information Technology
+				</label>
+				<label class="btn">
+				<input type="radio" name="shuffle-filter" value="PersonalProjects" />Personal Projects
+				</label>
+				<label class="btn">
+				<input type="radio" name="shuffle-filter" value="SchoolEvents" />School Events
+				</label>
+				<label class="btn">
+				<input type="radio" name="shuffle-filter" value="Achievements&Accolades" />Achievements & Accolades
+				</label>
+				</div>
+			</div>
     	</div>	
-
 		<div class="row shuffle-wrapper portfolio-gallery">
-	      <div class="col-lg-4 col-6 mb-4 shuffle-item"  data-groups="[&quot;design&quot;,&quot;InformationTechnology&quot;]">
-		      	<div class="position-relative inner-box">
-		          <div class="image position-relative ">
-	               <img src="images/portfolio/appdevproject.png" alt="portfolio-image" class="img-fluid w-100 d-block">
-	                <div class="overlay-box">
-	                  <div class="overlay-inner">
-	                    <a class="overlay-content" href="portfolioPages/appdevproject.html">
-	                      <h5 class="mb-0">App Development Project</h5>
-	                      <p>NYP - Year 1 Project</p>
-	                    </a>
-	                  </div>
-	                </div> 
-	            </div>
-		      </div>
-	      </div>
+			<div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;InformationTechnology&quot;]">
+				<div class="position-relative inner-box" >
+					<div class="image position-relative ">
+					<img src="images/portfolio/sysecproj (1).jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
+						<div class="overlay-box">
+						<div class="overlay-inner">
+								<a class="overlay-content" href="portfolioPages/sysecproject.html">
+								<h5 class="mb-0">System Security Project</h5>
+								<p>NYP - Year 2 Project</p>
+								</a>
+							</div> 
+						</div>
+					</div>
+				</div>
+			</div>
 
-	      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;branding&quot;]">
-	        <div class="position-relative inner-box" >
-	            <div class="image position-relative ">
-	               <img src="images/portfolio/4.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
-	                <div class="overlay-box">
-	                  <div class="overlay-inner">
-		                    <a class="overlay-content" href="portfolio-single.html">
-		                      <h5 class="mb-0">Web app</h5>
-		                      <p>Development</p>
-		                    </a>
-	                	</div> 
-		            </div>
-		        </div>
-		      </div>
-	      </div>
+			<div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;InformationTechnology&quot;]">
+				<div class="position-relative inner-box">
+					<div class="image position-relative">
+						<img src="images/portfolio/dsa.png" alt="portfolio-image" class="img-fluid w-100 d-block">
+						<div class="overlay-box">
+							<div class="overlay-inner">
+							<a class="overlay-content" href="portfolioPages/dsaproject.html">
+								<h5 class="mb-0">Data Structures & Algorithms Project</h5>
+								<p>NYP - Year 2 Project</p>
+							</a>
+							</div>
+						</div> 
+					</div>
+				</div>
+			</div>
 
-	      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;illustration&quot;]">
-	        <div class="position-relative inner-box">
-	            <div class="image position-relative ">
-	               <img src="images/portfolio/3.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
-	                <div class="overlay-box">
-	                  <div class="overlay-inner">
-	                    <a class="overlay-content" href="portfolio-single.html">
-	                      <h5 class="mb-0">Business </h5>
-	                      <p>marketing</p>
-	                    </a>
-	                  </div>
-	                </div> 
-	            </div>
-	        </div>
-	      </div>
-
-	      <!-- <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;design&quot;,&quot;branding&quot;]">
-	        <div class="position-relative inner-box">
-	            <div class="image position-relative ">
-	               <img src="images/portfolio/5.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
-	                <div class="overlay-box">
-	                  <div class="overlay-inner">
-	                    <a class="overlay-content" href="portfolio-single.html">
-	                      <h5 class="mb-0">Portfolio</h5>
-	                      <p>Design</p>
-	                    </a>
-	                  </div>
-	                </div> 
-	            </div>
-	        </div>
-	      </div>
-
-	      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;illustration&quot;]">
-	        <div class="position-relative inner-box">
-	            <div class="image position-relative ">
-	               <img src="images/portfolio/6.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
-	                <div class="overlay-box">
-	                  <div class="overlay-inner">
-	                    <a class="overlay-content" href="portfolio-single.html">
-	                       <h5 class="mb-0 ">Modern web</h5>
-	                      	<p>Seo</p>
-	                    </a>
-	                  </div>
-	                </div> 
-	            </div>
-	        </div>
-	      </div>
-
-	      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;design&quot;,&quot;photo&quot;]">
-	        <div class="position-relative inner-box">
-	            <div class="image position-relative ">
-	               <img src="images/portfolio/7.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
-	                <div class="overlay-box">
-	                  <div class="overlay-inner">
-	                    <a class="overlay-content" href="portfolio-single.html">
-	                       <h5 class="mb-0">Agency web</h5>
-	                      	<p>Design</p>
-	                    </a>
-	                  </div>
-	                </div> 
-	            </div>
-	        </div>
-	      </div> -->
-	    </div>
+			<div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;design&quot;,&quot;InformationTechnology&quot;]">
+				<div class="position-relative inner-box">
+					<div class="image position-relative ">
+					<img src="images/portfolio/appdevproject (5).png" alt="portfolio-image" class="img-fluid w-100 d-block">
+					<div class="overlay-box">
+						<div class="overlay-inner">
+						<a class="overlay-content" href="portfolioPages/appdevproject.html">
+							<h5 class="mb-0">App Development Project</h5>
+							<p>NYP - Year 1 Project</p>
+						</a>
+						</div>
+					</div> 
+				</div>
+			</div>
+		</div>
 	</div>
 </section>
 <!-- Portfolio End -->
