--- a/portfolioPages/dsaproject.html
+++ b/portfolioPages/dsaproject.html
@@ -63,7 +63,7 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="text-center">
-          <h1 class="text-capitalize mb-0 text-lg">App Development Project</h1>
+          <h1 class="text-capitalize mb-0 text-lg">Data Structures & Algorithms (DSA) Project</h1>
         </div>
       </div>
     </div>
@@ -78,19 +78,7 @@
 				<div id="projectCarousel" class="carousel slide" data-ride="carousel">
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-							<img src="../images/portfolio/appdevproject (5).png" alt="" class="img-fluid w-100">
-						</div>
-						<div class="carousel-item">
-							<img src="../images/portfolio/appdevproject (4).png" alt="" class="img-fluid w-100">
-						</div>
-						<div class="carousel-item">
-							<img src="../images/portfolio/appdevproject (1).png" alt="" class="img-fluid w-100">
-						</div>
-						<div class="carousel-item">
-							<img src="../images/portfolio/appdevproject (2).png" alt="" class="img-fluid w-100">
-						</div>
-						<div class="carousel-item">
-							<img src="../images/portfolio/appdevproject (3).png" alt="" class="img-fluid w-100">
+							<img src="../images/portfolio/dsa.png" alt="" class="img-fluid w-100">
 						</div>
 						<!-- Add additional slides with images as needed -->
 					</div>
@@ -108,10 +96,10 @@
 
 			<div class="col-lg-6">
 				<div class="project-info">
-					<h3 class="mb-4">Nanyang Polytechnic - Year 1 Project</h3>
-					<p>This project was the first project that I embarked on during my journey in NYP. For this project, my team and I took on working on a Car Dealership Website in which had all the basic functionalities such as viewing and buying cars, accessories, accounts and inventory.</p>
+					<h3 class="mb-4">Nanyang Polytechnic - Year 2 Project</h3>
+					<p>This project was </p>
 
-					<p>Full Functionality List: Vehicle Shopping Cart, Car & Accessory Inventory, User & Admin Account Management, Feedback & Review, Car Services and Reward Points.</p>
+					<p>Full Functionality List: Vehicle Shopping Cart, Car & Accessory Inventory, User & Admin Account Management, Feedback & Review, Car Services, Reward Points, IP Address Tracking & Login by Device, Data Encryption & Protection, Session Management, CSRF Protection, reCaptcha, 2FA, Path Traversal Attack Prevention and Audit Logs</p>
 
 					<div class="row mt-4">
 						<div class="col-lg-6">
@@ -122,10 +110,10 @@
 
 							<div class="info">
 								<h5 class="mb-0">Year</h5>
-								<p>2021</p>
+								<p>2022</p>
 							</div>
 							<div class="mt-4">
-								<a href="https://github.com/brandonpxw/App-Development-Project" target="_blank" class="btn btn-main btn-small">View project</a>
+								<a href="https://github.com/brandonpxw/System-Security-Project" target="_blank" class="btn btn-main btn-small">View project</a>
 							</div>
 						</div>
 
