--- a/index.html
+++ b/index.html
@@ -100,12 +100,31 @@
 				</label>
 				</div>
 			</div>
-    	</div>	
+    	</div>
+	
+
 		<div class="row shuffle-wrapper portfolio-gallery">
+
 			<div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;InformationTechnology&quot;]">
 				<div class="position-relative inner-box" >
 					<div class="image position-relative ">
-					<img src="images/portfolio/sysecproj (1).jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
+					<img src="images/portfolio/iotp (2).png" alt="portfolio-image" class="img-fluid w-100 d-block" style="min-width: 200px; min-height: 150px; object-fit: scale-down;">
+						<div class="overlay-box">
+						<div class="overlay-inner">
+								<a class="overlay-content" href="portfolioPages/iotp.html">
+								<h5 class="mb-0">Internet of Things Project</h5>
+								<p>NYP - Year 2 Project</p>
+								</a>
+							</div> 
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;InformationTechnology&quot;]">
+				<div class="position-relative inner-box" >
+					<div class="image position-relative ">
+					<img src="images/portfolio/awad.PNG" alt="portfolio-image" class="img-fluid w-100 d-block" style="min-width: 200px; min-height: 150px; object-fit: scale-down;">
 						<div class="overlay-box">
 						<div class="overlay-inner">
 								<a class="overlay-content" href="portfolioPages/awad.html">
@@ -121,7 +140,7 @@
 			<div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;InformationTechnology&quot;]">
 				<div class="position-relative inner-box" >
 					<div class="image position-relative ">
-					<img src="images/portfolio/sysecproj (1).jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
+					<img src="images/portfolio/sysecproj (1).PNG" alt="portfolio-image" class="img-fluid w-100 d-block" style="min-width: 200px; min-height: 150px; object-fit: scale-down;">
 						<div class="overlay-box">
 						<div class="overlay-inner">
 								<a class="overlay-content" href="portfolioPages/sysecproject.html">
@@ -137,7 +156,7 @@
 			<div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;InformationTechnology&quot;]">
 				<div class="position-relative inner-box">
 					<div class="image position-relative">
-						<img src="images/portfolio/dsa.png" alt="portfolio-image" class="img-fluid w-100 d-block">
+						<img src="images/portfolio/dsa.png" alt="portfolio-image" class="img-fluid w-100 d-block" style="min-width: 200px; min-height: 150px; object-fit: scale-down;">
 						<div class="overlay-box">
 							<div class="overlay-inner">
 							<a class="overlay-content" href="portfolioPages/dsaproject.html">
@@ -153,7 +172,7 @@
 			<div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;design&quot;,&quot;InformationTechnology&quot;]">
 				<div class="position-relative inner-box">
 					<div class="image position-relative ">
-					<img src="images/portfolio/appdevproject (5).png" alt="portfolio-image" class="img-fluid w-100 d-block">
+					<img src="images/portfolio/appdevproject (5).png" alt="portfolio-image" class="img-fluid w-100 d-block" style="min-width: 200px; min-height: 150px; object-fit: scale-down;">
 					<div class="overlay-box">
 						<div class="overlay-inner">
 						<a class="overlay-content" href="portfolioPages/appdevproject.html">
