--- a/portfolioPages/appdevproject.html
+++ b/portfolioPages/appdevproject.html
@@ -27,6 +27,16 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<!-- Main Stylesheet -->
 	<link href="../css/style.css" rel="stylesheet">
+	<style>
+		.carousel-control-prev-icon, .carousel-control-next-icon {
+			background-color: rgba(0, 0, 0, 0.7); /* Dark background color for the shadow */
+			box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); /* Dark shadow color and properties */
+		}
+
+		.carousel-control-prev, .carousel-control-next {
+			z-index: 1; /* Ensure the icons appear above the carousel content */
+		}		
+	</style>
 </head>
 
 <body>
