--- a/portfolioPages/iotp.html
+++ b/portfolioPages/iotp.html
@@ -73,7 +73,7 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="text-center">
-          <h1 class="text-capitalize mb-0 text-lg">Advanced Web Application Development Project</h1>
+          <h1 class="text-capitalize mb-0 text-lg">Internet of Things Project</h1>
         </div>
       </div>
     </div>
@@ -88,7 +88,19 @@
 				<div id="projectCarousel" class="carousel slide" data-ride="carousel">
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-							<img src="../images/portfolio/awad.PNG" alt="" class="img-fluid w-100">
+							<img src="../images/portfolio/iotp (5).png" alt="" class="img-fluid w-100">
+						</div>
+						<div class="carousel-item">
+							<img src="../images/portfolio/iotp (2).png" alt="" class="img-fluid w-100">
+						</div>
+						<div class="carousel-item">
+							<img src="../images/portfolio/iotp (1).png" alt="" class="img-fluid w-100">
+						</div>
+						<div class="carousel-item">
+							<img src="../images/portfolio/iotp (3).png" alt="" class="img-fluid w-100">
+						</div>
+						<div class="carousel-item">
+							<img src="../images/portfolio/iotp (4).png" alt="" class="img-fluid w-100">
 						</div>
 						<!-- Add additional slides with images as needed -->
 					</div>
@@ -107,9 +119,10 @@
 			<div class="col-lg-6">
 				<div class="project-info">
 					<h3 class="mb-4">Nanyang Polytechnic - Year 2 Project</h3>
-					<p>This project was .</p>
+					<p>This project was the first time that I dabbled with sensor technology and overall I felt that it was an extremely fun and rewarding project. The aim of our project was to improve on the security functions of existing gym lockers. We intended to do this via having various sensors in the locker such as an RFID Sensor for customers to use their own unique RFID Card to open as well as a light sensor inside the locker to detect for intruders and lastly, a buzzer and LEDs to alert personnel that the locker has been broken into.
+					</p>
 
-					<p>Full Functionality List: Vehicle Shopping Cart, Car & Accessory Inventory, User & Admin Account Management, Feedback & Review, Car Services and Reward Points.</p>
+					<p>Full Functionality List: Raspberry Pi: RFID, Light Sensor, Buzzer, UART Sensor, Red & Green LEDs, Windows Form: Dashboard, Account Management, Notifications, Tickets, Audit Logging, User Booking System and Registration.</p>
 
 					<div class="row mt-4">
 						<div class="col-lg-6">
@@ -123,7 +136,7 @@
 								<p>2022</p>
 							</div>
 							<div class="mt-4">
-								<a href="https://github.com/brandonpxw/Advanced-Web-Application-Development-Project" target="_blank" class="btn btn-main btn-small">View project</a>
+								<a href="https://github.com/brandonpxw/System-Security-Project" target="_blank" class="btn btn-main btn-small">View project</a>
 							</div>
 						</div>
 
