--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 <nav class="navbar navbar-expand-lg  main-nav " id="navbar">
 	<div class="container">
 	  <a class="navbar-brand" href="index.html">
-	  	<img src="images/signature.png" alt="" class="img-fluid">
+	  	<img src="images/signature.png" alt="" class="img-fluid" style="width: 20rem;">
 	  </a>
 
 	  <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,7 +69,6 @@
 
 				<p class="mb-4">Hello, I'm Brandon Poon, a current Year 3 student of Infocomm and Security at Nanyang Polytechnic. My academic journey has been marked by notable projects, such as the Sustainability Living Lab during my third year. In this initiative, I played a key role in pairing fresh sensors and contributing to the optimization of sustainability initiatives, employing technologies like Milesight, AWS, Flask App, and Grafana. Academically, I've gained proficiency in Web Design, HTML & CSS, C#, Python, Cisco Packet Tracer, MySQL, JavaScript, and AWS. These skills have found practical application in real-world projects, demonstrating my ability to bridge theory with hands-on experience. With a strong commitment to continuous learning, my focus on academic pursuits aligns with my enthusiasm for acquiring new skills and certifications. Looking ahead, I'm eager to contribute to the dynamic field of information technology and security, aspiring to participate, create, and grow in this ever-evolving landscape.</p>
 				
-				<img src="images/signature.png" alt="" class="img-fluid">
 			</div>
 
 			<div class="col-lg-5">
