--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <nav class="navbar navbar-expand-lg  main-nav " id="navbar">
 	<div class="container">
 	  <a class="navbar-brand" href="index.html">
-	  	<img src="images/signature.png" alt="" class="img-fluid">
+	  	<img src="images/signature.png" alt="" class="img-fluid" style="width: 20rem;">
 	  </a>
 
 	  <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
@@ -63,12 +63,12 @@
 		<div class="row">
 			<div class="col-lg-10">
 				 <h2 class="cd-headline clip is-full-width mb-4 ">
-				 	I provide <br>
-                    <span class="cd-words-wrapper text-color">
+				 	Hello! <br>
+                    <!-- <span class="cd-words-wrapper text-color">
                         <b class="is-visible">Design solutions. </b>
                         <b>Creative Ideas.</b>
                         <b>Professional Content.</b>
-                    </span>
+                    </span> -->
                 </h2>
                 <p>Below are the various projects and personal projects that I have taken up, as well as some of my achievements and accolades.</p>
 			</div>
@@ -189,7 +189,7 @@
 <!-- Portfolio End -->
 
 <!-- Service start -->
-<section class="section service-home border-top">
+<!-- <section class="section service-home border-top">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6">
@@ -243,7 +243,7 @@
 			</div>
 		</div>
 	</div>
-</section>
+</section> -->
 <!-- service end -->
 
 <!--  Footer Start-->
