--- a/portfolioPages/appdevproject.html
+++ b/portfolioPages/appdevproject.html
@@ -47,7 +47,7 @@
 <nav class="navbar navbar-expand-lg  main-nav " id="navbar">
 	<div class="container">
 	  <a class="navbar-brand" href="index.html">
-	  	<img src="../images/signature.png" alt="" class="img-fluid">
+	  	<img src="../images/signature.png" alt="" class="img-fluid" style="width: 20rem;">
 	  </a>
 
 	  <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
@@ -155,8 +155,8 @@
 		</div>
 		<div class="row mt-5 justify-content-center">
 			<div class="col-lg-6 text-center">
-				<a href="portfolio-single4.html" class="btn btn-dark">Previous Work</a>
-				<a href="portfolio-single2.html" class="btn btn-dark">Next Work</a>
+				<a href="dsaproject.html" class="btn btn-dark">Previous Work</a>
+				<a href="iotp.html" class="btn btn-dark">Next Work</a>
 			</div>
 		</div>
 	</div>
