--- a/resume.html
+++ b/resume.html
@@ -3,129 +3,125 @@
 <html lang="zxx">
 
 <head>
-  <meta charset="utf-8">
-  <title>Brandon Poon</title>
+	<meta charset="utf-8">
+	<title>Brandon Poon</title>
 
-  <!-- mobile responsive meta -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  
-  <!-- ** Plugins Needed for the Project ** -->
-  <!-- Bootstrap -->
-  <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
-  <link rel="stylesheet" href="plugins/themify/css/themify-icons.css">
-  <link rel="stylesheet" href="plugins/counto/animate.css">
-  <link rel="stylesheet" href="plugins/aos/aos.css">
-  <link rel="stylesheet" href="plugins/owl-carousel/owl.carousel.min.css">
-  <link rel="stylesheet" href="plugins/owl-carousel/owl.theme.default.min.css">
-  <link rel="stylesheet" href="plugins/magnific-popup/magnific-popup.css">
-  <link rel="stylesheet" href="plugins/animated-text/animated-text.css">
+	<!-- mobile responsive meta -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-  <!-- Main Stylesheet -->
-  <link href="css/style.css" rel="stylesheet">
+	<!-- ** Plugins Needed for the Project ** -->
+	<!-- Bootstrap -->
+	<link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
+	<link rel="stylesheet" href="plugins/themify/css/themify-icons.css">
+	<link rel="stylesheet" href="plugins/counto/animate.css">
+	<link rel="stylesheet" href="plugins/aos/aos.css">
+	<link rel="stylesheet" href="plugins/owl-carousel/owl.carousel.min.css">
+	<link rel="stylesheet" href="plugins/owl-carousel/owl.theme.default.min.css">
+	<link rel="stylesheet" href="plugins/magnific-popup/magnific-popup.css">
+	<link rel="stylesheet" href="plugins/animated-text/animated-text.css">
+
+	<!-- Main Stylesheet -->
+	<link href="css/style.css" rel="stylesheet">
 
 </head>
 
 <body>
-  
-<!-- Navigation Start -->
-<!-- Header Start --> 
 
-<nav class="navbar navbar-expand-lg  main-nav " id="navbar">
-	<div class="container">
-	  <a class="navbar-brand" href="index.html">
-	  	<img src="images/signature.png" alt="" class="img-fluid" style="width: 20rem;">
-	  </a>
+	<!-- Navigation Start -->
+	<!-- Header Start -->
 
-	  <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="ti-align-justify"></span>
-	  </button>
-  
-		  <div class="collapse navbar-collapse" id="navbarsExample09">
-			<ul class="navbar-nav ml-auto">
-			   <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-			   <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-			   <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
-			</ul>
-		</div>
-	</div>
-</nav>
+	<nav class="navbar navbar-expand-lg  main-nav " id="navbar">
+		<div class="container">
+			<a class="navbar-brand" href="index.html">
+				<img src="images/signature.png" alt="" class="img-fluid" style="width: 20rem;">
+			</a>
 
-<!-- Header Close --> 
-<!-- Navigation End -->
+			<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="ti-align-justify"></span>
+			</button>
 
-<!-- Banner start -->
-<section class="section banner-3">
-	<div class="container">
-		<div class="row justify-content-center align-items-left">
-			<div class="col-lg-7">
-				<h2>My Resume</h2>
-				<iframe src= "images\Brandon-Poon-210455E_Resume.pdf" width="100%" height="500"></iframe> 
+			<div class="collapse navbar-collapse" id="navbarsExample09">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+					<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+					<li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
+				</ul>
 			</div>
 		</div>
-	</div>
-</section>
+	</nav>
 
-<!-- Banner End -->
-
-<!-- Cta Start -->
-<section class="section-sm pt-0 cta">
-	<div class="container">
-		<div class="row align-items-center bg-dark p-5">
-			<div class="col-lg-8">
-				<h3 class="text-white mb-0">Need further clarifications?</h3>
-			</div>
-			<div class="col-lg-4 text-lg-right mt-5 mt-lg-0">
-				<a href="mailto:brandonpoonxinwei@gmail.com" class="btn btn-white">Contact me</a>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- Cta ENd -->
-
-<!--  Footer Start-->
-<section class="footer">
-	<div class="container">
-		<div class="row ">
-			<div class="col-lg-6">
-				<p class="mb-0">Reach me easily at: <a href="themefisher.com" class="text-white">brandonpoonxinwei@gmail.com</a></p>
-			</div>
-			<div class="col-lg-6">
-				<div class="widget footer-widget text-lg-right mt-5 mt-lg-0">
-					<ul class="list-inline mb-0">
-						<!-- <li class="list-inline-item"><a href="https://www.facebook.com/themefisher" target="_blank"><i class="ti-facebook mr-3"></i></a>
-						</li>
-						<li class="list-inline-item"><a href="https://twitter.com/themefisher" target="_blank"><i class="ti-twitter mr-3"></i></a>
-						</li> -->
-						<li class="list-inline-item"><a href="https://www.linkedin.com/in/brandonpxw/" target="_blank"><i class="ti-linkedin mr-3"></i></a></li>
-						<li class="list-inline-item"><a href="mailto:brandonpoonxinwei@gmail.com" target="_blank"><i class="ti-email mr-3"></i></a></li>
-						<li class="list-inline-item"><a href="https://github.com/brandonpxw/" target="_blank"><i class="ti-github mr-3"></i></a></li>
-						<!-- <li class="list-inline-item"><a href="https://www.pinterest.com/themefisher/" target="_blank"><i class="ti-pinterest mr-3"></i></a></li>
-						<li class="list-inline-item"><a href="https://dribbble.com/themefisher/" target="_blank"><i class="ti-dribbble mr-3"></i></a></li> -->
-					</ul>
+	<!-- Header Close -->
+	<!-- Navigation End -->
+	<!-- Banner start -->
+	<section class="section banner-3">
+		<div class="container">
+			<div class="row justify-content-center align-items-left">
+				<div class="col-lg-7">
+					<h2>My Resume</h2>
+					<iframe src="images\resume.pdf" width="100%" height="500"></iframe>
 				</div>
 			</div>
 		</div>
-	</div>
-</section>
-<!-- Footer end -->
+	</section>
 
-<!-- jQuery -->
-<script src="plugins/jQuery/jquery.min.js"></script>
-<!-- Bootstrap JS -->
-<script src="plugins/bootstrap/bootstrap.min.js"></script>
-<script src="plugins/aos/aos.js"></script>
-<script src="plugins/owl-carousel/owl.carousel.min.js"></script>
-<script src="plugins/shuffle/shuffle.min.js"></script>
-<script src="plugins/magnific-popup/jquery.magnific-popup.min.js"></script>
-<script src="plugins/animated-text/animated-text.js"></script>
-<script src="plugins/counto/apear.js"></script>
-<script src="plugins/counto/counTo.js"></script>
+	<!-- Banner End -->
+	<!-- Cta Start -->
+	<section class="section-sm pt-0 cta">
+		<div class="container">
+			<div class="row align-items-center bg-dark p-5">
+				<div class="col-lg-8">
+					<h3 class="text-white mb-0">Need further clarifications?</h3>
+				</div>
+				<div class="col-lg-4 text-lg-right mt-5 mt-lg-0">
+					<a href="mailto:brandonpoonxinwei@gmail.com" class="btn btn-white">Contact me</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- Cta ENd -->
+	<!--  Footer Start-->
+	<section class="footer">
+		<div class="container">
+			<div class="row ">
+				<div class="col-lg-6">
+					<p class="mb-0">Reach me easily at: <a href="themefisher.com" class="text-white">brandonpoonxinwei@gmail.com</a></p>
+				</div>
+				<div class="col-lg-6">
+					<div class="widget footer-widget text-lg-right mt-5 mt-lg-0">
+						<ul class="list-inline mb-0">
+							<!-- <li class="list-inline-item"><a href="https://www.facebook.com/themefisher" target="_blank"><i class="ti-facebook mr-3"></i></a>
+							</li>
+							<li class="list-inline-item"><a href="https://twitter.com/themefisher" target="_blank"><i class="ti-twitter mr-3"></i></a>
+							</li> -->
+							<li class="list-inline-item"><a href="https://www.linkedin.com/in/brandonpxw/" target="_blank"><i class="ti-linkedin mr-3"></i></a></li>
+							<li class="list-inline-item"><a href="mailto:brandonpoonxinwei@gmail.com" target="_blank"><i class="ti-email mr-3"></i></a></li>
+							<li class="list-inline-item"><a href="https://github.com/brandonpxw/" target="_blank"><i class="ti-github mr-3"></i></a></li>
+							<!-- <li class="list-inline-item"><a href="https://www.pinterest.com/themefisher/" target="_blank"><i class="ti-pinterest mr-3"></i></a></li>
+							<li class="list-inline-item"><a href="https://dribbble.com/themefisher/" target="_blank"><i class="ti-dribbble mr-3"></i></a></li> -->
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- Footer end -->
+	<!-- jQuery -->
+	<script src="plugins/jQuery/jquery.min.js"></script>
+	<!-- Bootstrap JS -->
+	<script src="plugins/bootstrap/bootstrap.min.js"></script>
+	<script src="plugins/aos/aos.js"></script>
+	<script src="plugins/owl-carousel/owl.carousel.min.js"></script>
+	<script src="plugins/shuffle/shuffle.min.js"></script>
+	<script src="plugins/magnific-popup/jquery.magnific-popup.min.js"></script>
+	<script src="plugins/animated-text/animated-text.js"></script>
+	<script src="plugins/counto/apear.js"></script>
+	<script src="plugins/counto/counTo.js"></script>
 
- <!-- Google Map -->
-<script src="plugins/google-map/map.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAkeLMlsiwzp6b3Gnaxd86lvakimwGA6UA&callback=initMap"></script> 
-<!-- Main Script -->
-<script src="js/script.js"></script>
+	<!-- Google Map -->
+	<script src="plugins/google-map/map.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAkeLMlsiwzp6b3Gnaxd86lvakimwGA6UA&callback=initMap"></script>
+	<!-- Main Script -->
+	<script src="js/script.js"></script>
 
 </html>
